welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:14: error: ambiguous reference to overloaded definition,
both method forward in class DwarfCode of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
  forward
  ^DwarfCode:26: error: not found: value Direction
  if (getDirection() == Direction.WEST)
                        ^